--- a/front-end/src/components/main/main.css
+++ b/front-end/src/components/main/main.css
@@ -43,7 +43,7 @@
   background-color: white;
   border: 1px solid #8d8075;
   margin: 5px;
-  display: flex;
+  overflow: auto;
   justify-content: center;
   align-items: center;
 }
